[package]
name = "echo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-client-ip = "0.6.0"
axum-extra = { version = "0.9.3", features = ["cookie"] }
gethostname = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46.1", features = ["full"] }
